--- a/procto-api/package.json
+++ b/procto-api/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "@types/uuid": "^9.0.1",
+    "uuid": "^9.0.0"
   }
 }
